--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,7 +39,7 @@ server.port=8081
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
+spring.mail.username=a
 spring.mail.password=9804242668
  
 # Other properties
