--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,8 +39,8 @@ server.port=8081
  
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=aa
-spring.mail.password=9804242668
+spring.mail.username=@gmail
+spring.mail.password=password
  
 # Other properties
 spring.mail.properties.mail.debug=true
